--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <span class="title">To Do</span>
       </header>
       <div id="todoWrapper">
+        <!-- asidebar -->
         <aside id="sideNavBarWrapper">
             <button onclick="navBarLauncher()" class="navBarLauncher">
               <img src="./assets/hamburger.svg" />
