--- a/index.html
+++ b/index.html
@@ -28,14 +28,7 @@
                 <img src="./assets/sun.svg" />
                 <div class="navItem">
                   <span>My Day</span>
-                  <span class="numberOfTasks">1</span>
-                </div>
-              </li>
-              <li>
-                <img src="./assets/star.svg" />
-                <div class="navItem">
-                <span>Important</span>
-                <span class="numberOfTasks">1</span>
+                  <span class="numberOfTasks"></span>
                 </div>
               </li>
             </ul>
@@ -57,22 +50,14 @@
               <button class="bulletButton">
             <img src="assets/add.svg"></button>
             <input class="textField" type="text" placeholder="Add A Task " autofocus/>
-            <button onclick="Add()" class="addToDo">Add</button>
+            <button onclick="AddToDo()" class="addToDo">Add</button>
           </div>
             <ul id="toDoListing">
-              <li class="toDoItems">
-                <input type="checkbox" class="checkbox"/> 
-                <span class="toDoValue">Lorem ipsum dolor sit amet consectetur adipisicing elit. </span>
-                <div id="titleFunction">
-                  <button onclick="addToFavourites()" class="addToFavourites"><img src="assets/star.svg"/></button>
-                  <button onclick="removeToDo()" class="removeToDo"><img src="./assets/trash.svg"></button>
-                </div>
-              </li>
             </ul>
           </div>
         </section>
       </div>
     </main>
-    <script src="index.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
