--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@
         </section>
       </div>
     </main>
-    <script src="./script.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
